Add product editing,deleting functionality

--- a/views/products/details.ejs
+++ b/views/products/details.ejs
@@ -9,8 +9,12 @@
     <h1><%= product.name %></h1>
     <ul>
         <li>Price: $<%= product.price %></li>
-        <li>Category: <%= product.category %></li>
+        <li>Category: <a href="/products?category=<%= product.category %>"><%= product.category %></a></li>
     </ul>
     <a href="/products">BACK TO PRODUCTS</a>
+    <a href="/products/<%= product._id %>/edit">EDIT</a>
+    <form action="/products/<%= product._id%>?_method=DELETE" method="post">
+        <button>DELETE</button>
+    </form>
 </body>
 </html>
