--- a/views/products/index.ejs
+++ b/views/products/index.ejs
@@ -6,11 +6,15 @@
     <title>Products</title>
 </head>
 <body>
-    <h1>All Products</h1>
+    <h1><%=category.toUpperCase()%> PRODUCTS</h1>
     <ul>
         <% for (let product of products) { %>
           <li><a href="/products/<%= product._id %>"><%= product.name %></a></li>
-            <% } %>
+            <% } %>           
     </ul>
+    <a href="products/new">ADD NEW PRODUCT</a>
+    <% if (category.toUpperCase() !== 'ALL') { %>
+       <a href="/products">BACK TO PRODUCTS</a>
+    <% } %>
 </body>
 </html>
