Associate products with farms

--- a/views/products/new.ejs
+++ b/views/products/new.ejs
@@ -6,8 +6,9 @@
     <title>New Product</title>
 </head>
 <body>
-    <h1>ADD NEW PRODUCT</h1>
-    <form action="/products" method="post">
+    <h1><%=farm.name%></h1>
+    <h2>Add a product</h2>
+    <form action="/farms/<%=farm._id%>/products" method="post">
         <label for="name">Product name:</label>
         <input type="text" id="name" name = "name" placeholder="Product name">
         <label for="price">Price:</label>
@@ -20,6 +21,6 @@
         </select>
         <button>Submit</button>
     </form>
-    <a href="/products">CANCEL</a>
+    <a href="/farms/<%=farm._id%>">Cancel</a>
 </body>
 </html>
