--- a/views/products/edit.ejs
+++ b/views/products/edit.ejs
@@ -6,7 +6,7 @@
     <title>Edit Product</title>
 </head>
 <body>
-    <h1>EDIT PRODUCT</h1>
+    <h1>Edit Product</h1>
     <form action="/products/<%=product._id%>?_method=PUT" method="post">
         <label for="name">Product name:</label>
         <input type="text" id="name" name = "name" placeholder="Product name" value="<%=product.name%>">
@@ -20,6 +20,6 @@
         </select>
         <button>Submit</button>
     </form>
-    <a href="/products/<%= product._id %>">CANCEL</a>
+    <a href="/products/<%= product._id %>">Cancel</a>
 </body>
 </html>
