--- a/views/products/index.ejs
+++ b/views/products/index.ejs
@@ -3,18 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Products</title>
+    <title>All Products</title>
 </head>
 <body>
-    <h1><%=category.toUpperCase()%> PRODUCTS</h1>
+    <h1><%=category%> Products</h1>
     <ul>
         <% for (let product of products) { %>
           <li><a href="/products/<%= product._id %>"><%= product.name %></a></li>
             <% } %>           
     </ul>
-    <a href="products/new">ADD NEW PRODUCT</a>
-    <% if (category.toUpperCase() !== 'ALL') { %>
-       <a href="/products">BACK TO PRODUCTS</a>
+    <a href="products/new">Add new product</a>
+    <% if (category !== 'All') { %>
+       <a href="/products">Back to products</a>
     <% } %>
 </body>
 </html>
